# arXivFlow

./: .gitignore  GEMINI.md  README.md  pyproject.toml
examples/editor/: README.md  outreach_emails.py
examples/researcher/: README.md  outreach_emails.py
src/arxivflow/: __init__.py  arxiv_functions.py  arxivflow.py  categories.py  gemini_functions.py  ollama_functions.py
tests/: test_arxiv_functions.py  test_arxivflow.py  test_arxivflow_gemini.py  test_gemini_functions.py  test_ollama_functions.py
