[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxivflow"
version = "0.2.0"
description = "Automate arXiv paper tracking with LLM-powered metadata extraction and Google Sheets sync."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
  {name = "Zhijie Zhao"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.3",
    "gspread>=6.2.1",
    "ollama>=0.6.1",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
]

[project.urls]
"Homepage" = "https://github.com/zjzhao/arXivFlow"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.db", "*.xlsx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]